2003-09-29  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* unix/tcl.m4 (SC_ENABLE_FRAMEWORK): Added note to make it clearer
	that this is an OSX feature, not a general Unix feature. [Bug 619440]

2003-09-28  David Gravereaux <davygrvy@pobox.com>

	* win/tclWinPipe.c: The windows port of expect can call
	TclWinAddProcess before any of the other pipe functions.
	Added a missing PipeInit() call to make sure the
	initialization happens.

2003-09-25  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/Makefile: ensure SYMROOT exists if OBJROOT is overridden 
	on command line. Replaced explict use of /usr/bin by ${BINDIR}.

2003-09-23  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclCmdMZ.c ():		Fixed [Bug 807243] where
	* tests/trace.test (trace-31,32.*):	the introspection results
	of both [trace info command] and [trace info execution] were getting
	co-mingled.  Thanks to Mark Saye for the report.

	* library/init.tcl (auto_load, auto_import):  Expanded Eric Melski's
	2000-01-28 fix for [Bug 218871] to all potentially troubled uses of
	[info commands] on input data, where glob-special characters could
	cause problems.

2003-09-19  Miguel Sofer <msofer@users.sf.net>

	* generic/tclExecute.c: adding (DE)CACHE_STACK_INFO() pairs to
	protect all calls that may cause traces on ::errorInfo or
	::errorCode to corrupt the stack [Bug 804681]

2003-09-10  Don Porter  <dgp@users.sourceforge.net>

	* library/opt/optparse.tcl:	Overlooked dependence of opt 0.4.4
	* library/opt/pkgIndex.tcl:	on Tcl 8.2.  Bumped to opt 0.4.4.1.

2003-09-01  Zoran Vasiljevic <zoran@archiware.com>

	* generic/tclIOUtil.c: backported fix from HEAD [Bug 788780]

2003-08-27  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclUtil.c:	Corrected [Bug 411825] and other bugs in
	TclNeedSpace() where non-breaking space (\u00A0) and backslash-escaped
	spaces were handled incorrectly.  
	* tests/util.test:	Added new tests util-8.[2-6].

2003-08-06  Jeff Hobbs  <jeffh@ActiveState.com>
